--- a/app/src/main/res/layout/review_row.xml
+++ b/app/src/main/res/layout/review_row.xml
@@ -38,6 +38,8 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:isIndicator="true"
             android:id="@+id/rbRest"
             android:stepSize=".5" />
 
