getting images from places api and displaying them in the details fragments

--- a/app/src/main/res/layout/fragment_resaurant_detail.xml
+++ b/app/src/main/res/layout/fragment_resaurant_detail.xml
@@ -58,5 +58,9 @@
             android:layout_height="wrap_content"
             android:text="Website"
             android:id="@+id/tvQWebsite" />
-    </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ivImage"/>
+        </LinearLayout>
 </LinearLayout>
