--- a/app/src/main/res/layout/favourite_row.xml
+++ b/app/src/main/res/layout/favourite_row.xml
@@ -17,6 +17,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ibButton"/>
+        android:id="@+id/ibButton"
+        android:src="@drawable/common_google_signin_btn_text_dark_disabled"/>
 
 </LinearLayout>
