--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -10,13 +10,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.CategoryActivity">
 
-    <TextView
+    <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Categorites"
-        android:id="@+id/textView2"
+        android:id="@+id/spinner"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="94dp" />
+        android:layout_centerHorizontal="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvCategoryList"
+        android:layout_below="@+id/spinner"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
