remove from favourites implemnted

--- a/app/src/main/res/layout/fragment_resaurant_detail.xml
+++ b/app/src/main/res/layout/fragment_resaurant_detail.xml
@@ -67,10 +67,31 @@
             android:id="@+id/ivImage"/>
         </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="58dp">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to Favouties"
+            android:id="@+id/btnFavourites"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remove from favourites"
+            android:id="@+id/btnRemoveFavourites"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add to Favouties"
-        android:id="@+id/btnFavourites"
+        android:text="Share"
+        android:id="@+id/btnShare"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
