--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,43 +8,75 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.MainActivity">
+    android:orientation="vertical"
+    tools:context=".ui.MainActivity"
+    android:weightSum="1">
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search"
-        android:id="@+id/search_button"
-        android:drawableLeft="@drawable/ic_search_black_24dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_weight="0.25">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Map"
-        android:id="@+id/map_button"
-        android:drawableLeft="@drawable/ic_map_black_24dp"
-        android:layout_marginBottom="98dp"
-        android:layout_above="@+id/favourite_button"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:id="@+id/search_button"
+            android:drawableLeft="@drawable/ic_search_black_24dp"
+            android:layout_above="@+id/favourite_button"
+            android:layout_centerHorizontal="true"
+            android:paddingEnd="50px" />
+    </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Favourites"
-        android:id="@+id/favourite_button"
-        android:drawableLeft="@drawable/ic_star_black_24dp"
-        android:layout_marginBottom="95dp"
-        android:layout_above="@+id/category_button"
-        android:layout_alignStart="@+id/category_button" />
+        android:layout_weight="0.25">
 
-    <Button
-        android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Favourites"
+            android:id="@+id/favourite_button"
+            android:drawableLeft="@drawable/ic_star_black_24dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Categories"
-        android:id="@+id/category_button"
-        android:drawableLeft="@drawable/ic_sort_black_24dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        android:layout_weight="0.25">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Categories"
+            android:id="@+id/category_button"
+            android:drawableLeft="@drawable/ic_sort_black_24dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.25">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Map"
+            android:id="@+id/map_button"
+            android:drawableLeft="@drawable/ic_map_black_24dp"
+            android:layout_above="@+id/favourite_button"
+            android:layout_centerHorizontal="true" />
+    </LinearLayout>
+
+</LinearLayout>
