--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -68,13 +68,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnGotoPage"
-                android:text="More details"/>
+                android:text="More details"
+                android:layout_weight="0.5" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnPlacesMap"
-                android:text="Show on Map"/>
+                android:text="Show on Map"
+                android:layout_weight="0.5" />
         </LinearLayout>
 
 
